Fix z-index for mainmenu in ui-layout mode

--- a/src/main/webapp/ngboostrap/app/views/root/css/root.less
+++ b/src/main/webapp/ngboostrap/app/views/root/css/root.less
@@ -107,7 +107,7 @@
 	position: absolute;
 	display: block;
 	bottom: 0;
-	z-index: 1903;	
+	z-index: 1803;	
 	width: 100%;	
 	
 	.fixed-footer & {
@@ -166,7 +166,7 @@ html, body{
 //	min-height: 100%;
 	>div{
 		>nav{
-			z-index: 1905;
+			z-index: 1805;
 		}
 	}
 }
