--- a/src/main/webapp/ngboostrap/app/widgets/common/sidemenu/css/sidemenu.less
+++ b/src/main/webapp/ngboostrap/app/widgets/common/sidemenu/css/sidemenu.less
@@ -31,7 +31,7 @@ aside#sidemenu-container{
 	border: @sidemenu-border;
 	-webkit-overflow-scrolling: touch;
 	-webkit-overflow-scrolling: -blackberry-touch;
-	z-index: 1900px;
+	z-index: 1800;
 //	@media (max-width: @screen-sm-max) {
 //		position: absolute;
 //		top: 128px;
@@ -49,7 +49,7 @@ aside#sidemenu-container{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 1904;
+	z-index: 1804;
 	padding-top: @sidemenu-top; 
 	width: @sidemenu-width;
 
