--- a/src/main/webapp/ngboostrap/app/widgets/mainmenu/css/mainmenu.less
+++ b/src/main/webapp/ngboostrap/app/widgets/mainmenu/css/mainmenu.less
@@ -1,7 +1,8 @@
 .mainmenu{
 	.fixed-header & {
 		@media (min-width: @screen-sm-min){
-			.navbar-fixed-top();			
+			.navbar-fixed-top();
+			z-index: 1905;			
 			border: 1px solid transparent;
 		}
 	}
